app ready for test

--- a/ionic-test/v1App/www/templates/tabs.html
+++ b/ionic-test/v1App/www/templates/tabs.html
@@ -6,14 +6,28 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Foto" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" href="#/tab/dash">
+    <ion-nav-view name="tab-photo"></ion-nav-view>
   </ion-tab>
   
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Ansicht" icon-off="ion-ios-eye-outline" icon-on="ion-ios-eye" href="#/tab/image">
+    <ion-nav-view name="tab-image"></ion-nav-view>
   </ion-tab>
+  
+  <!-- Account Tab -->
+  <ion-tab title="Senden" icon-off="ion-ios-email-outline" icon-on="ion-ios-email" href="#/tab/mail">
+    <ion-nav-view name="tab-mail"></ion-nav-view>
+  </ion-tab>
+  
+  <!-- Account Tab -->
+  <!--<ion-tab title="Ansicht" icon-off="ion-ios-eye-outline" icon-on="ion-ios-eye" href="#/tab/account">
+    <ion-nav-view name="tab-account"></ion-nav-view>
+  </ion-tab> -->
+  
+  <!--<ion-tab title="Senden" icon-off="ion-ios-email-outline" icon-on="ion-ios-email" href="#/tab/account">
+    <ion-nav-view name="tab-account"></ion-nav-view>
+  </ion-tab>-->
 
 
 </ion-tabs>
